add AddLinkedLine logic

--- a/Dunkleosteus/Dunkleosteus.CSharp.csproj
+++ b/Dunkleosteus/Dunkleosteus.CSharp.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Assets\Scripts\Demo\SpriteStar.cs" />
     <Compile Include="Assets\Scripts\Game\EventController.cs" />
     <Compile Include="Assets\Scripts\Game\GlobalDefine.cs" />
+    <Compile Include="Assets\Scripts\Game\LineDrawer.cs" />
     <Compile Include="Assets\Scripts\Game\Shine.cs" />
     <Compile Include="Assets\Scripts\Game\Star.cs" />
     <Compile Include="Assets\Scripts\Singletons\GamePlayMgr.cs" />
