--- a/Dunkleosteus/Dunkleosteus.CSharp.csproj
+++ b/Dunkleosteus/Dunkleosteus.CSharp.csproj
@@ -213,11 +213,13 @@
     <Compile Include="Assets\Scripts\Demo\SpriteStar.cs" />
     <Compile Include="Assets\Scripts\Game\EventController.cs" />
     <Compile Include="Assets\Scripts\Game\GlobalDefine.cs" />
+    <Compile Include="Assets\Scripts\Game\LevelPlayMgr.cs" />
     <Compile Include="Assets\Scripts\Game\LineDrawer.cs" />
     <Compile Include="Assets\Scripts\Game\Shine.cs" />
     <Compile Include="Assets\Scripts\Game\Star.cs" />
     <Compile Include="Assets\Scripts\Singletons\GamePlayMgr.cs" />
     <Compile Include="Assets\Scripts\Singletons\Singleton.cs" />
+    <Compile Include="Assets\Scripts\Singletons\TemplateMgr.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\NGUI\Examples\Atlases\Fantasy\Fantasy Font - Normal.txt" />
