--- a/Dunkleosteus/Dunkleosteus.CSharp.csproj
+++ b/Dunkleosteus/Dunkleosteus.CSharp.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Assets\Scripts\Demo\SimpleButton.cs" />
     <Compile Include="Assets\Scripts\Demo\SpriteStar.cs" />
     <Compile Include="Assets\Scripts\Game\EventController.cs" />
+    <Compile Include="Assets\Scripts\Game\GameContainer.cs" />
     <Compile Include="Assets\Scripts\Game\GlobalDefine.cs" />
     <Compile Include="Assets\Scripts\Game\LevelPlayMgr.cs" />
     <Compile Include="Assets\Scripts\Game\LineDrawer.cs" />
