--- a/Dunkleosteus/Dunkleosteus.CSharp.csproj
+++ b/Dunkleosteus/Dunkleosteus.CSharp.csproj
@@ -216,13 +216,13 @@
     <Compile Include="Assets\NGUI\Scripts\UI\UITexture.cs" />
     <Compile Include="Assets\NGUI\Scripts\UI\UITooltip.cs" />
     <Compile Include="Assets\NGUI\Scripts\UI\UIViewport.cs" />
-    <Compile Include="Assets\Scripts\Demo\GameDirector.cs" />
     <Compile Include="Assets\Scripts\Demo\LocalizationLabel.cs" />
     <Compile Include="Assets\Scripts\Demo\RemoveButton.cs" />
     <Compile Include="Assets\Scripts\Demo\SimpleButton.cs" />
     <Compile Include="Assets\Scripts\Demo\SpriteStar.cs" />
     <Compile Include="Assets\Scripts\Game\EventController.cs" />
     <Compile Include="Assets\Scripts\Game\GameContainer.cs" />
+    <Compile Include="Assets\Scripts\Game\GameDirector.cs" />
     <Compile Include="Assets\Scripts\Game\GlobalDefine.cs" />
     <Compile Include="Assets\Scripts\Game\LevelPlayMgr.cs" />
     <Compile Include="Assets\Scripts\Game\LineDrawer.cs" />
