--- a/Dunkleosteus/Dunkleosteus.CSharp.csproj
+++ b/Dunkleosteus/Dunkleosteus.CSharp.csproj
@@ -221,12 +221,16 @@
     <Compile Include="Assets\Scripts\Demo\SimpleButton.cs" />
     <Compile Include="Assets\Scripts\Demo\SpriteStar.cs" />
     <Compile Include="Assets\Scripts\FSM\FiniteState.cs" />
-    <Compile Include="Assets\Scripts\FSM\FiniteStateEvent.cs" />
-    <Compile Include="Assets\Scripts\FSM\FiniteStateEventSystem.cs" />
     <Compile Include="Assets\Scripts\FSM\FiniteStateMachine.cs" />
     <Compile Include="Assets\Scripts\Game\EventController.cs" />
     <Compile Include="Assets\Scripts\Game\GameContainer.cs" />
     <Compile Include="Assets\Scripts\Game\GameDirector.cs" />
+    <Compile Include="Assets\Scripts\Game\GameState\CardViewState.cs" />
+    <Compile Include="Assets\Scripts\Game\GameState\CreditViewState.cs" />
+    <Compile Include="Assets\Scripts\Game\GameState\GameSceneState.cs" />
+    <Compile Include="Assets\Scripts\Game\GameState\LevelSelectState.cs" />
+    <Compile Include="Assets\Scripts\Game\GameState\MainMenuState.cs" />
+    <Compile Include="Assets\Scripts\Game\GameState\OptionMenuState.cs" />
     <Compile Include="Assets\Scripts\Game\GlobalDefine.cs" />
     <Compile Include="Assets\Scripts\Game\LevelPlayMgr.cs" />
     <Compile Include="Assets\Scripts\Game\LineDrawer.cs" />
