--- a/Dunkleosteus/Dunkleosteus.CSharp.csproj
+++ b/Dunkleosteus/Dunkleosteus.CSharp.csproj
@@ -231,12 +231,14 @@
     <Compile Include="Assets\Scripts\Game\GameState\MainMenuState.cs" />
     <Compile Include="Assets\Scripts\Game\GlobalDefine.cs" />
     <Compile Include="Assets\Scripts\Game\LevelPlayMgr.cs" />
+    <Compile Include="Assets\Scripts\Game\LevelSelect.cs" />
     <Compile Include="Assets\Scripts\Game\LineDrawer.cs" />
     <Compile Include="Assets\Scripts\Game\Shine.cs" />
     <Compile Include="Assets\Scripts\Game\Star.cs" />
     <Compile Include="Assets\Scripts\Singletons\GamePlayMgr.cs" />
     <Compile Include="Assets\Scripts\Singletons\Singleton.cs" />
     <Compile Include="Assets\Scripts\Singletons\TemplateMgr.cs" />
+    <Compile Include="Assets\Scripts\Singletons\levelDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\JSON Tests\TroubleShoot.txt" />
