refactor levelselectmgr to mvc

--- a/Dunkleosteus/Assembly-CSharp-Editor.csproj
+++ b/Dunkleosteus/Assembly-CSharp-Editor.csproj
@@ -227,6 +227,8 @@
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
       <Project>{539E4AA6-0284-3A44-DE45-6F47B2B1A14F}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-CSharp.csproj">
+      <Project>{0F5C4CEB-C2C5-342F-5F59-0D88D506A3A1}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
