--- a/Dunkleosteus/UnityVS.Dunkleosteus.CSharp.csproj
+++ b/Dunkleosteus/UnityVS.Dunkleosteus.CSharp.csproj
@@ -223,21 +223,21 @@
     <Compile Include="Assets\Scripts\FSM\FiniteState.cs" />
     <Compile Include="Assets\Scripts\FSM\FiniteStateMachine.cs" />
     <Compile Include="Assets\Scripts\Game\Controller\EventController.cs" />
-    <Compile Include="Assets\Scripts\Game\GameContainer.cs" />
-    <Compile Include="Assets\Scripts\Game\GameDirector.cs" />
     <Compile Include="Assets\Scripts\Game\GameState\CardViewState.cs" />
     <Compile Include="Assets\Scripts\Game\GameState\GameSceneState.cs" />
     <Compile Include="Assets\Scripts\Game\GameState\LevelSelectState.cs" />
     <Compile Include="Assets\Scripts\Game\GameState\MainMenuState.cs" />
     <Compile Include="Assets\Scripts\Game\GlobalDefine.cs" />
-    <Compile Include="Assets\Scripts\Game\LevelPlayView.cs" />
-    <Compile Include="Assets\Scripts\Game\LevelSelect.cs" />
-    <Compile Include="Assets\Scripts\Game\LevelSelectMgr.cs" />
+    <Compile Include="Assets\Scripts\Game\Model\GameDirector.cs" />
     <Compile Include="Assets\Scripts\Game\Model\LevelPlayModel.cs" />
-    <Compile Include="Assets\Scripts\Game\Shine.cs" />
-    <Compile Include="Assets\Scripts\Game\Sky.cs" />
-    <Compile Include="Assets\Scripts\Game\Star.cs" />
-    <Compile Include="Assets\Scripts\Game\StarDetail.cs" />
+    <Compile Include="Assets\Scripts\Game\View\GameContainer.cs" />
+    <Compile Include="Assets\Scripts\Game\View\LevelPlayView.cs" />
+    <Compile Include="Assets\Scripts\Game\View\LevelSelectView.cs" />
+    <Compile Include="Assets\Scripts\Game\View\LevelView.cs" />
+    <Compile Include="Assets\Scripts\Game\View\Shine.cs" />
+    <Compile Include="Assets\Scripts\Game\View\Sky.cs" />
+    <Compile Include="Assets\Scripts\Game\View\Star.cs" />
+    <Compile Include="Assets\Scripts\Game\View\StarDetail.cs" />
     <Compile Include="Assets\Scripts\Singletons\Singleton.cs" />
     <Compile Include="Assets\Scripts\Singletons\TemplateMgr.cs" />
   </ItemGroup>
